# upload_files_to_s3

./: .gitignore  README.md  create_test.bat  create_test_data.py  env.example  main.py  pyproject.toml  requirements.txt  run.bat  run.ps1  setup.py
src/: ais_cli.py  ais_uploader.py  aws.py  uploader.py
